fixes for timeseries evaluation